@@ -64,8 +64,8 @@ public class exprNodeGenericFuncDesc extends exprNodeDesc implements Serializabl
     this.childExprs = children;
   }
   @Override
-  public List<? extends Node> getChildren() {
-    return (List<? extends Node>)this.childExprs;
+  public List<exprNodeDesc> getChildren() {
+    return this.childExprs;
   }
   public String toString() {
     StringBuilder sb = new StringBuilder();
