@@ -512,6 +512,8 @@ Release 0.4.0 -  Unreleased
     HIVE-772. Fix genConversionSelect for init serde with null.
     (Namit Jain via zshao)
 
+    HIVE-769. Fix bug in partition pruning (Zheng Shao via namit)
+
 Release 0.3.1 - Unreleased
 
   INCOMPATIBLE CHANGES
